k8s/employee-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-service
  labels:
    app: employee-service
spec:
  type: ClusterIP
  selector:
    app: employee-service
  ports:
    - port: 8080
      targetPort: 8080
      name: http
